# Stock-Automate

./: .env.example  .gitignore  README.md  database.py  docker-compose.yml  helper.py  main.py  market.py  neural_net.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  stock.py  test2.py  thinkingpad.txt  turbo.json
.github/workflows/: ci.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260717_0812_5c93d1e5d2d6_initial_schema.py  20260717_1639_045d3b68c4f1_scanner_and_proposals.py  20260718_0245_4c555a89a446_value_scoring_on_scanner_results.py  20260718_0312_0f75d2ac25fb_primary_score_and_value_weighting.py  20260718_0412_03a42e4bbda3_risk_engine_paper_broker_trade_intents.py  20260718_1536_d72851034a39_stops_trailing_reconciliation_halts_eod_.py  20260719_1528_194cbd855af8_strategy_layer.py  20260719_1619_ea234ccbc752_live_arming_mode.py  20260720_1135_32211713f911_live_ceilings_on_risk_configuration.py
apps/api/app/: __init__.py  config.py  db.py  main.py  seed.py
apps/api/app/api/: schemas.py
apps/api/app/api/routes/: account.py  approvals.py  audit.py  auth.py  health.py  instruments.py  live.py  notifications.py  portfolio.py  risk.py  scanner.py  strategies.py
apps/api/app/audit/: __init__.py  service.py
apps/api/app/auth/: __init__.py  dependencies.py  service.py
apps/api/app/broker/: __init__.py  base.py  factory.py  internal_paper.py  mock.py  read_cache.py  trading212.py  types.py
apps/api/app/data/: __init__.py  base.py  budget.py  factory.py  mock_provider.py  normalization.py  store.py  twelve_data_provider.py  types.py  yfinance_provider.py
apps/api/app/indicators/: __init__.py  functions.py  series.py
apps/api/app/models/: __init__.py  audit.py  base.py  enums.py  instrument.py  market_data.py  paper.py  reporting.py  risk.py  scanner.py  strategy.py  system.py  user.py
apps/api/app/observability/: __init__.py  logging.py
apps/api/app/risk/: __init__.py  config.py  engine.py  execution.py  halts.py  live_guard.py  stops.py
apps/api/app/scanner/: __init__.py  engine.py  proposals.py  rotation.py  scoring.py
apps/api/app/scripts/: check_credentials.py  generate_vapid_keys.py
apps/api/app/security/: __init__.py  crypto.py
apps/api/app/services/: __init__.py  backfill.py  email.py  eod.py  ingestion.py  instrument_sync.py  mapping.py  reconciliation.py  system_settings.py
apps/api/app/strategies/: __init__.py  base.py  engine.py  mean_reversion.py  pie.py  registry.py  trend.py
apps/api/tests/integration/: conftest.py  test_account_and_notifications.py  test_eod.py  test_error_handlers.py  test_execution_flow.py  test_internal_paper_broker.py  test_intraday_ingestion.py  test_live_execution.py  test_live_guard.py  test_phase1_flow.py  test_reconciliation.py  test_risk_engine.py  test_scanner_flow.py  test_stops.py  test_strategy_engine.py  test_strategy_live.py  test_system_settings.py
apps/api/tests/unit/: test_broker_factory.py  test_broker_read_cache.py  test_email_service.py  test_indicators.py  test_mock_broker.py  test_normalization.py  test_scanner_scoring.py  test_trading212_auth.py  test_twelve_data_provider.py  test_vapid_keys.py  test_yfinance_adapter.py
apps/web/: next.config.ts  package.json  tsconfig.json  (+1 more)
apps/worker/: celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml
apps/worker/worker/: app.py  locks.py
apps/worker/worker/jobs/: instruments.py  market_data.py  risk.py  scanner.py  strategy.py
basic/: main.py  test.py
docs/: architecture.md  data-providers.md  pwa.md  risk-model.md  trading212-setup.md
input_features/: chart_analysis.py  gnews_info.py  news_scrapper.py  sentient_scrapper.py
(+22 files in other folders)
