[project]
name = "trading-platform-api"
version = "0.1.0"
description = "FastAPI service for the stock scanner and autonomous trading platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    # asyncpg drives the application; psycopg2 drives Alembic, whose migration
    # context is synchronous. Both are required.
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.4",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.1",
    "redis>=5.2.1",
    "cryptography>=44.0.0",
    "argon2-cffi>=23.1.0",
    "itsdangerous>=2.2.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.20",
    "yfinance>=0.2.51",
    "pandas>=2.2.3",
    "numpy>=2.1.1",
    "pandas-market-calendars>=4.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.8.4",
    "mypy>=1.14.0",
    # NOT types-redis: it is pinned at 4.6 while we run redis 5.x, and the stale
    # stub shadows redis-py's own bundled py.typed — which is how `aclose` came
    # out "missing". redis-py ships its own types; let it.
    "pandas-stubs>=2.2.3",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF", "ASYNC"]
ignore = [
    # Pydantic/SQLAlchemy models legitimately shadow builtins in field names.
    "A003",
    # `Depends()`/`Query()` in argument defaults is the FastAPI idiom, not a
    # mutable-default bug: FastAPI resolves them per-request rather than reusing
    # one instance. Flagging it would mean a noqa on nearly every route.
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
# Autogenerated migrations: alembic's own formatting, not ours to police.
"alembic/versions/*" = ["E501", "I001", "RUF100"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# These ship without type stubs.
module = ["yfinance.*", "pandas_market_calendars.*", "argon2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:yfinance.*",
]
