[project]
name = "trading-platform-worker"
version = "0.1.0"
description = "Scheduled and background jobs for the trading platform"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4.0",
    "structlog>=24.4.0",
    "redis>=5.2.1",
    # The worker runs the API's domain layer rather than reimplementing it, so a
    # scheduled sync and an API-triggered sync cannot diverge.
    "trading-platform-api",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.4",
    "mypy>=1.14.0",
]

[tool.uv.sources]
trading-platform-api = { path = "../api", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
